tests/ui/array-slice-vec/closure-in-array-len.rs
struct Foo (
    fn([u8; |x: u8| {}]), //~ ERROR mismatched types
);

fn main() {}
